// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get all movies when: a user want to view all movies with a specific release year then: we return all the movie titles with the specified release year 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <p>
        Here are your favourite movies:
        <form action="/movies/create"
              method="get"
        >
          <button>
            Add a Movie
          </button>
        </form>
      </p>
      <ul>
      </ul>
      <p>
      </p>
      <a href="/movies/1">
      </a>
      <p>
      </p>
      <a href="/movies/2">
      </a>
    </main>
  </body>
</html>
`;

exports[`get all movies when: a user wants to view all movies with NO query strings then: we return all the movie titles 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <p>
        Here are your favourite movies:
        <form action="/movies/create"
              method="get"
        >
          <button>
            Add a Movie
          </button>
        </form>
      </p>
      <ul>
      </ul>
      <p>
      </p>
      <a href="/movies/1">
        Nosferatu
      </a>
      <p>
      </p>
      <a href="/movies/2">
        Point Break
      </a>
    </main>
  </body>
</html>
`;
